Todo List animation using Framer Motion

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+input[type="checkbox"] {
+    /* Remove default appearance */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    /* Create custom checkbox */
+    width:16px;
+    height: 16px;
+    background-color: #d5d5f5;
+    border-radius: 9999px;
+    /* Fully rounded */
+    border: 2px solid #4f46e5;
+    transition: background-color 0.2s, border-color 0.2s;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #46e596;
+    /* Change color when checked */
+    border-color: #17ac03;
+}
+
+input[type="checkbox"]:focus {
+    outline: none;
+    /* box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.5); */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none !important;
+  }
+
+.no-scrollbar {
+    -ms-overflow-style: none !important;
+    /* IE and Edge */
+    scrollbar-width: none !important;
+    /* Firefox */
+  }
